--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,45 +1,59 @@
 {
     "files.associations": {
-        "*.cpp": "cpp",
-        "iostream": "cpp",
+        "vector": "cpp",
+        "cstdlib": "cpp",
+        "algorithm": "cpp",
         "array": "cpp",
         "atomic": "cpp",
-        "*.tcc": "cpp",
+        "bit": "cpp",
         "cctype": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
-        "cstdarg": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
         "cstddef": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
-        "cstdlib": "cpp",
+        "cstring": "cpp",
         "ctime": "cpp",
         "cwchar": "cpp",
-        "cwctype": "cpp",
-        "deque": "cpp",
-        "unordered_map": "cpp",
-        "vector": "cpp",
         "exception": "cpp",
-        "algorithm": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "optional": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "fstream": "cpp",
+        "functional": "cpp",
         "initializer_list": "cpp",
+        "ios": "cpp",
         "iosfwd": "cpp",
+        "iostream": "cpp",
         "istream": "cpp",
+        "iterator": "cpp",
         "limits": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "memory": "cpp",
         "new": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
         "ostream": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "string": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "typeinfo": "cpp",
+        "unordered_map": "cpp",
+        "utility": "cpp",
+        "xfacet": "cpp",
+        "xhash": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
+        "xlocinfo": "cpp",
+        "xlocnum": "cpp",
+        "xmemory": "cpp",
+        "xstddef": "cpp",
+        "xstring": "cpp",
+        "xtr1common": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp"
     }
 }
