--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 geographical-system/build/Desktop_Qt_6_9_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/target-geographical-system_autogen_timestamp_deps-Debug-1a0cb656ebcdcf471526.json
+/geographical-system/build/Desktop_Qt_6_9_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev
